Fixed Spacing Bugs

--- a/_components.scss
+++ b/_components.scss
@@ -126,6 +126,7 @@
     opacity: 0.45;
     backdrop-filter: blur(86px);
     margin-top: 14.2rem;
+    margin-bottom: 7.3rem;
     padding: 3.8rem 8.2rem 3.5rem 8.3rem;
 
     &_con {
@@ -161,8 +162,6 @@
   align-items: center;
   align-content: center;
   height: 13.9rem;
-  margin-top: 6.2rem;
-  margin-bottom: 3.4rem;
 
   &__img {
     height: 3.3rem;
@@ -175,6 +174,7 @@
     font-weight: 900;
     color: $color-white;
     margin-bottom: 6.4rem;
+    margin-top: 9.7rem;
   }
 
   &__card {
@@ -195,6 +195,7 @@
 
     &_text {
       font-family: $font-family-sub-1;
+      margin-top: 9.7rem;
     }
 
     &_name {
