--- a/css/style.css
+++ b/css/style.css
@@ -18,17 +18,17 @@ body {
   align-items: center;
   height: 9.6rem;
   background-color: #1f1d2b;
-  padding: 0 15rem; }
+  margin: 0 15rem; }
 
 .section-head {
-  padding-left: 15.1rem;
+  margin-left: 15.1rem;
   margin-top: 14.1rem; }
 
 .section-partner {
-  padding: 0 15rem; }
+  margin: 6.2rem 15rem 3.4rem 15rem; }
 
 .section-top-sellers {
-  padding: 0 15rem; }
+  margin: 0 15rem; }
 
 .header__logo, .header__logo:link, .header__logo:visited {
   font-family: "IBM Plex Sans", sans-serif;
@@ -118,6 +118,7 @@ body {
     opacity: 0.45;
     backdrop-filter: blur(86px);
     margin-top: 14.2rem;
+    margin-bottom: 7.3rem;
     padding: 3.8rem 8.2rem 3.5rem 8.3rem; }
     .head__user_con {
       display: inline-block;
@@ -142,9 +143,7 @@ body {
   justify-content: space-around;
   align-items: center;
   align-content: center;
-  height: 13.9rem;
-  margin-top: 6.2rem;
-  margin-bottom: 3.4rem; }
+  height: 13.9rem; }
   .partner__img {
     height: 3.3rem; }
 
@@ -152,7 +151,8 @@ body {
   font-size: 4.8rem;
   font-weight: 900;
   color: #ffffff;
-  margin-bottom: 6.4rem; }
+  margin-bottom: 6.4rem;
+  margin-top: 9.7rem; }
 
 .top-sellers__card {
   background: url(../img/top-sellers-bg.png);
@@ -166,7 +166,8 @@ body {
   .top-sellers__card:not(:last-child) {
     margin-right: 2.4rem; }
   .top-sellers__card_text {
-    font-family: "IBM Plex Sans", sans-serif; }
+    font-family: "IBM Plex Sans", sans-serif;
+    margin-top: 9.7rem; }
   .top-sellers__card_name {
     font-size: 2rem;
     font-weight: 700;
