--- a/sass/_layout.scss
+++ b/sass/_layout.scss
@@ -4,19 +4,19 @@
   align-items: center;
   height: 9.6rem;
   background-color: #1f1d2b;
-  padding: $container;
+  margin: $container;
 }
 
 .section-head {
   // padding: $container;
-  padding-left: 15.1rem;
+  margin-left: 15.1rem;
   margin-top: 14.1rem;
 }
 
 .section-partner {
-  padding: $container;
+  margin: 6.2rem 15rem 3.4rem 15rem;
 }
 
 .section-top-sellers {
-  padding: $container;
+  margin: $container;
 }
